--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Шиномонтаж «Добрые Колёса» — бережно и быстро</title>
+  <title>Шиномонтаж «Шинка на грибоедова» — бережно и быстро</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Полный спектр работ шиномонтажа: переобувка, балансировка, ремонт проколов, правка дисков, TPMS. Понятно для всех. Запись по телефону и WhatsApp.">
   <style>
