--- a/index.html
+++ b/index.html
@@ -111,5 +111,5 @@
         <form class="form" id="bookingForm">
           <div class="row">
             <div><label>Имя<input type="text" name="name" placeholder="Например, Анна" required></label></div>
-            <div><label>Телефон<input type="tel" name="phone" placeholder="+7 999 000-00-00" required></label></div>
+            <div><label>Телефон<input type="tel" name="phone" placeholder="+375 298491028" required></label></div>
           </div>
