--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="container topbar">
     <div class="brand">
       <div class="logo" aria-hidden="true">🛞</div>
-      <div>Шиномонтаж «Добрые Колёса»</div>
+      <div>Шиномонтаж «Шинка на грибоедова»</div>
     </div>
     <nav aria-label="Основная навигация">
       <a class="nav-link" href="#services">Услуги</a>
