--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <div class="container hero-wrap">
       <div>
         <span class="badge">Бережно, быстро и понятно для всех</span>
-        <h1>Полный шиномонтаж: от переобувки до ремонта проколов</h1>
+        <h1>полный шиномонтаж: от переобувки до ремонта проколов</h1>
         <p>Объясняем простыми словами, без сложных терминов. Аккуратно обращаемся с дисками и датчиками. Поможем и подскажем.</p>
         <div class="actions">
-          <a class="btn" href="tel:+79990000000">Позвонить: +7 (999) 000‑00‑00</a>
+          <a class="btn" href="tel:+375(33)644-66-88">Позвонить: +375 (33) 644 - 66 - 88 </a>
           <a class="btn secondary" href="https://wa.me/79990000000?text=Здравствуйте!%20Хочу%20записаться%20на%20шиномонтаж." target="_blank" rel="noopener">WhatsApp запись</a>
           <a class="btn light" href="#prices">Посмотреть цены</a>
         </div>
