Под вайбер уже с номером норм

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
         <p>Объясняем простыми словами, без сложных терминов. Аккуратно обращаемся с дисками и датчиками. Поможем и подскажем.</p>
         <div class="actions">
           <!-- Замените номер на свой -->
-          <a class="btn" href="tel:+79990000000">Позвонить: +7 (999) 000‑00‑00</a>
+          <a class="btn" href="tel:+375336446688">Позвонить: +375 (33) 644 66 88</a>
           <!-- Ссылка на Viber: %2B — это знак +, далее номер без пробелов -->
           <a class="btn secondary" href="viber://chat?number=%2B79990000000">Viber запись</a>
           <a class="btn light" href="#prices">Посмотреть цены</a>
         </div>
         <!-- Замените адрес и время работы на свои -->
-        <p class="note">Работаем ежедневно: 09:00–21:00 • Адрес: ул. Примерная, 12, Москва</p>
+        <p class="note">Работаем ежедневно: 09:00–20:00 • Адрес: ул. Грибоедова 27 , г. Витебск </p>
       </div>
 
       <div class="card">
@@ -124,7 +124,7 @@
             </label></div>
             <div><label>Телефон
               <!-- Замените placeholder на свой формат -->
-              <input type="tel" name="phone" placeholder="+7 999 000-00-00" required>
+              <input type="tel" name="phone" placeholder="+375 (33) 644 66 88" required>
             </label></div>
           </div>
           <div class="row">
@@ -137,7 +137,6 @@
                 <option>R13–R16</option>
                 <option>R17–R18</option>
                 <option>R19–R21</option>
-                <option>R22 и более</option>
               </select>
             </label></div>
           </div>
@@ -148,7 +147,6 @@
                 <option>Балансировка</option>
                 <option>Ремонт прокола/пореза</option>
                 <option>Правка диска</option>
-                <option>Сезонное хранение</option>
                 <option>Датчики TPMS</option>
               </select>
             </label></div>
