--- a/index.html
+++ b/index.html
@@ -1,36 +1,135 @@
-<div class="card row" style="align-items:flex-start">
-  <div class="col">
-    <h2 style="margin-top:0;margin-bottom:8px">Режим работы</h2>
-    <div class="meta">Будни и выходные</div>
-    <p><strong>С 08:00 до 20:00</strong></p>
-    <p class="small">Шиномонтаж работает по живой очереди — вы можете приехать в любое время в указанные часы.</p>
-
-    <hr style="border:none;height:1px;background:#eee;margin:16px 0">
-
-    <h3 style="margin-bottom:6px">Мобильный шиномонтаж</h3>
-    <p class="small">Мобильный шиномонтаж работает круглосуточно вне сезона переобувки. Есть возможность записаться заранее.</p>
-    <!-- Замените ссылку ниже на вашу реальную ссылку для записи -->
-    <p><a href="https://example.com/booking" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:underline">Записаться на мобильный шиномонтаж (ссылка для замены)</a></p>
-
-    <hr style="border:none;height:1px;background:#eee;margin:16px 0">
-
-    <h3 style="margin-bottom:6px">Контакты</h3>
-    <p class="small">Адрес: улица Грибоедова, 27</p>
-    <p class="small">Телефон: <a href="tel:+3753364466688" class="phone">+375 (33) 644-66-88</a></p>
-  </div>
-
-  <div class="col">
-    <h2 style="margin-top:0;margin-bottom:8px">Локация на Яндекс.Картах</h2>
-    <div class="meta">Ниже — виджет Яндекс.Карт по запросу адреса</div>
-    <div class="card map-wrap" style="padding:0;">
-      <!-- Виджет Яндекс.Карт: поиск по адресу "улица Грибоедова 27" -->
-      <!-- При необходимости замените параметр text в src на точный адрес/город -->
-      <iframe src="https://yandex.ru/map-widget/v1/?text=%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%93%D1%80%D0%B8%D0%B1%D0%BE%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%2027" frameborder="0" style="width:100%;height:100%;" allowfullscreen></iframe>
+hero .actions{display:flex;gap:12px;flex-wrap:wrap}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:16px}
+    .grid{display:grid;gap:16px}
+    .grid-3{grid-template-columns:repeat(3,1fr)}
+    .service{display:flex;gap:12px}
+    .icon{width:40px;height:40px;border-radius:10px;background:#e2f3fb;display:flex;align-items:center;justify-content:center;font-size:20px}
+    .service h3{margin:0 0 6px;font-size:18px}
+    .muted{color:var(--muted)}
+    .price-line{display:flex;justify-content:space-between;padding:8px 12px;border:1px dashed var(--border);border-radius:10px}
+    .form input,.form select,.form textarea{width:100%;padding:12px;border:1px solid var(--border);border-radius:10px}
+    .form textarea{min-height:90px}
+    .form .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .note{font-size:13px;color:var(--muted)}
+    .contacts{display:grid;grid-template-columns:1fr 1fr;gap:16px}
+    .map{width:100%;height:320px;border:0;border-radius:16px}
+    footer{padding:24px 0;color:#64748b;font-size:14px}
+    @media (max-width:900px){
+      .hero-wrap{grid-template-columns:1fr}
+      .grid-3{grid-template-columns:1fr}
+      .contacts{grid-template-columns:1fr}
+      nav{display:none}
+      nav.open{display:flex;flex-direction:column;gap:8px;padding:12px 0}
+      .menu-btn{display:inline-flex}
+    }
+  </style>
+</head>
+<body>
+<header>
+  <div class="container topbar">
+    <div class="brand">
+      <div class="logo" aria-hidden="true">🛞</div>
+      <div>Шиномонтаж «Добрые Колёса»</div>
     </div>
-    <p class="small" style="margin-top:8px">Если нужно — замените ссылку iframe на готовый код из конструктора Яндекс.Карт с точной меткой.</p>
+    <nav id="mainNav" aria-label="Основная навигация">
+      <a class="nav-link" href="#services">Услуги</a>
+      <a class="nav-link" href="#booking">Запись</a>
+      <a class="nav-link" href="#mobile">Мобильный 24/7</a>
+      <a class="nav-link" href="#contacts">Контакты</a>
+    </nav>
+    <button class="btn menu-btn" aria-label="Меню" onclick="toggleMenu()">Меню</button>
   </div>
-</div>
+</header>
 
-<footer class="card">
-  <div class="small">Информация: шиномонтаж по адресу улица Грибоедова 27 работает с 08:00 до 20:00 по живой очереди. Мобильный шиномонтаж — круглосуточно вне сезона переобувки (есть запись).</div>
-</footer>
+<main>
+  <section class="hero">
+    <div class="container hero-wrap">
+      <div>
+        <span class="badge">Бережно, быстро и понятно для всех</span>
+        <h1>Шиномонтаж на ул. Грибоедова, 27 — Витебск</h1>
+        <p>Работаем с 08:00 до 20:00 по живой очереди — приезжайте в любое удобное время в этот интервал.</p>
+        <div class="actions">
+          <a class="btn" href="tel:+375336446688">Позвонить: +375 (33) 644‑66‑88</a>
+          <a class="btn light" href="#contacts">Как добраться</a>
+        </div>
+        <p class="note">Адрес: ул. Грибоедова, 27, г. Витебск • Бережно относимся к вашим дискам и датчикам TPMS.</p>
+      </div>
+
+      <div class="card" id="booking">
+        <h3 style="margin-top:0">Запись онлайн (по желанию)</h3>
+        <form name="booking" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/thanks.html" class="form">
+          <input type="hidden" name="form-name" value="booking">
+          <p style="display:none"><label>Не заполняйте это поле: <input name="bot-field"></label></p>
+
+          <div class="row">
+            <div><label>Имя
+              <input type="text" name="name" placeholder="Например, Анна" required>
+            </label></div>
+            <div><label>Телефон
+              <input type="tel" name="phone" placeholder="+375 (33) 644‑66‑88" required>
+            </label></div>
+          </div>
+          <div class="row">
+            <div><label>Авто (марка/модель)
+              <input type="text" name="car" placeholder="Kia Rio, BMW X5 и т.п.">
+            </label></div>
+            <div><label>Желаемое время (необязательно)
+              <input type="datetime-local" name="when">
+            </label></div>
+          </div>
+          <label>Комментарий
+            <textarea name="comment" placeholder="Например: балансировка, ремонт прокола, секретки"></textarea>
+          </label>
+          <div class="note">Нажимая «Отправить», вы даёте согласие на обработку персональных данных.</div>
+          <div style="margin-top:12px">
+            <button class="btn" type="submit">Отправить заявку</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <section id="services" class="section">
+    <div class="container">
+      <h2>Услуги</h2>
+      <div class="grid grid-3">
+        <div class="card service">
+          <div class="icon">🔁</div>
+          <div>
+            <h3>Смена комплекта</h3>
+            <p class="muted">Переобувка 4 колёс, бережно и быстро.</p>
+          </div>
+        </div>
+        <div class="card service">
+          <div class="icon">⚖️</div>
+          <div>
+            <h3>Балансировка</h3>
+            <p class="muted">Ровная, тихая езда без вибраций.</p>
+          </div>
+        </div>
+        <div class="card service">
+          <div class="icon">🩹</div>
+          <div>
+            <h3>Ремонт проколов</h3>
+            <p class="muted">Жгуты/грибы, проверка герметичности.</p>
+          </div>
+        </div>
+        <div class="card service">
+          <div class="icon">🛠️</div>
+          <div>
+            <h3>Правка дисков</h3>
+            <p class="muted">Восстановление геометрии диска.</p>
+          </div>
+        </div>
+        <div class="card service">
+          <div class="icon">📡</div>
+          <div>
+            <h3>TPMS</h3>
+            <p class="muted">Аккуратная работа с датчиками давления.</p>
+          </div>
+        </div>
+        <div class="card service">
+          <div class="icon">🚐</div>
+          <div>
+            <h3>Мобильный шиномонтаж 24/7</h3>
+            <p
